# maat

./: .editorconfig  .gitignore  LICENSE  README.md  generate_mock_report.py  maat  pyproject.toml  sample_notebook.ipynb
.claude/: settings.json
.codex/: hooks.json
.devcontainer/: devcontainer.json
.junie/: guidelines.md
docs/: checkouts.md  experiments.md  gcp-runners.md  local.md  timings.md
frontend/: .gitignore  .prettierrc  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite-plugin-maat.ts  vite.config.ts
reports/: .gitignore  mock-demo.json  nightly-2.13.1-nightly-2025-11-10.json  nightly-2.13.1-nightly-2025-11-12.json  nightly-latest.json  nightly-latest.json.backup  nightly-nightly-2025-11-01-nightly-2025-11-07.json  nightly-nightly-2025-11-08-nightly-2025-11-10.json  nightly-nightly-2025-11-08-nightly-2025-11-12.json  nightly-nightly-2025-11-25-nightly-2025-12-02.json  nightly-nightly-2025-11-25-nightly-2025-12-03.json  nightly-nightly-2025-12-10-nightly-2025-12-15.json  nightly-nightly-2026-01-09-nightly-2026-01-15.json  nightly-nightly-2026-01-15-nightly-2026-01-15.json  nightly-nightly-2026-01-17-nightly-2026-01-20.json  nightly-nightly-2026-01-21-nightly-2026-01-21.json  nightly-nightly-2026-01-21-nightly-2026-01-25.json  nightly-nightly-2026-01-21-nightly-2026-02-01.json  nightly-nightly-2026-01-21-nightly-2026-02-03.json  nightly-nightly-2026-01-21-nightly-2026-02-15.json  nightly-nightly-2026-03-21-nightly-2026-03-22.json  nightly-nightly-2026-03-25-nightly-2026-03-25.json  (+87 more)
(+779 files in other folders)
