[project]
name = "maat"
version = "0.1.0"
description = "Run experimental software builds across Cairo language ecosystem."
readme = "README.md"
authors = [
    { name = "Marek Kaput", email = "marek.kaput@swmansion.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cache-to-disk>=2.0.0",
    "click>=8.1.8",
    "pydantic>=2.11.3",
    "python-on-whales>=0.75.1",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "rich>=13.9.4",
    "ruff>=0.11.0",
    "tomlkit>=0.13.2",
]

[project.scripts]
maat = "maat:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
